Fixes bad spacing between object inputs and actions.

--- a/tool-ui/src/main/webapp/style/v3/form.less
+++ b/tool-ui/src/main/webapp/style/v3/form.less
@@ -621,7 +621,8 @@
   }
 }
 
-.objectInputs {
+.inputLarge > .objectInputs,
+.inputLarge > .toggleable-form > .objectInputs {
   margin-bottom: -10px;
 }
 
